// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<li
  className="cf-1hg1ctm"
  role={null}
>
  <a
    aria-label="PaginationLabel"
    className="cf-1ex7c60"
    href="#"
    onClick={[Function]}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active 1`] = `
<li
  className="cf-9nha49"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-3opov"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render disabled 1`] = `
<li
  className="cf-19kgvty"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-3opov"
  >
    PaginationItem
  </span>
</li>
`;
